--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Token - Wallet</title>
   <!-- Bootstrap -->
+  <!-- Libraries BS, JQuery, Web3, Truffle-Contract, App -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/web3.min.js"></script>
-  <script src="js/truffle-contract.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/truffle-contract@4.0.31/dist/truffle-contract.min.js"></script>
   <script src="js/app.js"></script>
+
 </head>
 
 <body>
   <header class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid justify-content-center">
       <a class="navbar-brand" href="#">
-        <h1 class="text-center">Remembrance Token</h1>
+        <h1 class="text-center">SOC TOKEN APP</h1>
       </a>
     </div>
   </header>
+
   <section class="container-fluid">
     <div class="row min-vh-100">
       <div class="col-sm-3" style="background-color:lavender;">
       </div>
       <div class="col-sm-6" style="background-color:lavenderblush;">
-        <br />
-        <h2 class="text-center">&#128151; Sending Token of Love &#128151;</h2>
-        <h4 class="text-center">Where memories live on:</h4>
+
         <div class="card">
-          <img class="card-img-top mx-auto d-block" src="img/mytoken.png" alt="Card image" style="width:20%">
+          <img class="card-img-top mx-auto d-block" src="https://pink-glamorous-cuckoo-175.mypinata.cloud/ipfs/QmYsTtGKMpUjuCLC7wXf65BXhSytobiAzprEywvTYT3NP2" alt="Card image" style="width:40%">
           <div class="card-body">
-            <h4 class="card-title">Jane Doe Remembrance Token</h4>
-            <p class="card-text">This token is created with love and friendship so that it represents long lasting</p>
+            <h4 class="card-title">SOC Remembrance Token</h4>
+            <p class="card-text">This token is created for SOC internal usage</p>
             <div class="row">
               <h5><strong>My Wallet : </strong></strongMy><small id="MyTokenWallet"></small></h5>
-              <h5><strong>Balance</strong>: <small id="MyTokenBalance"></small> RPT</h5>
+              <h5><strong>Balance</strong>: <small id="MyTokenBalance"></small> SOC</h5>
               <h4>Transfer</h4>
               <div class="input-group mb-3">
                 <input type="text" class="form-control" id="MyTokenTransferAddress" placeholder="Address" />
@@ -60,8 +60,7 @@
   <!-- Footer -->
   <footer class="fixed-bottom text-center text-lg-start bg-light text-muted">
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      &copy; 2022 Copyright:
-      <a class="text-reset fw-bold" href="https://www.gcit.edu.sg/">GCIT+</a>
+      &copy; 2024 Copyright: Singapore Polytechnic
     </div>
   </footer>
   <!-- Footer -->
